--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -306,7 +306,7 @@
               <th width="15%">金額</th>
               <th width="15%"></th>
             </tr>
-            <tr>
+            <tr class="card-item">
               <td>
                 <div class="cardItem-title">
                   <img src="https://i.imgur.com/HvT3zlU.png" alt="" />
