--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="../src/style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
     <body>
@@ -26,7 +35,7 @@
       </nav>
       <section class="wrap" id="bedAdvantage">
         <div class="banner">
-          <h2 class="banner-text">窩窩家居<br />跟您一起品味生活</h2>
+          <h2 class="banner-text">不宜家傢俱<br />跟您一起品味生活</h2>
         </div>
         <h3 class="section-title">床墊優勢</h3>
         <ul class="bedAdvantage">
@@ -306,20 +315,7 @@
               <th width="15%">金額</th>
               <th width="15%"></th>
             </tr>
-            <tr class="card-item">
-              <td>
-                <div class="cardItem-title">
-                  <img src="https://i.imgur.com/HvT3zlU.png" alt="" />
-                  <p>Antony 雙人床架／雙人加大</p>
-                </div>
-              </td>
-              <td>NT$12,000</td>
-              <td>1</td>
-              <td>NT$12,000</td>
-              <td class="discardBtn">
-                <a href="#" class="material-icons"> clear </a>
-              </td>
-            </tr>
+            <tr class="card-item-wrapper"></tr>
             <tr>
               <td>
                 <a href="#" class="discardAllBtn">刪除所有品項</a>
