Finished discardAllBtn func

--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -325,7 +325,7 @@
               <td>
                 <p>總金額</p>
               </td>
-              <td>NT$13,980</td>
+              <td class="shoppingCartTotal">NT$0</td>
             </tr>
           </table>
         </div>
