--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -308,6 +308,7 @@
         <h3 class="section-title">我的購物車</h3>
         <div class="overflowWrap">
           <table class="shoppingCart-table">
+            <caption></caption>
             <tr>
               <th width="40%">品項</th>
               <th width="15%">單價</th>
