--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -307,28 +307,7 @@
       <section class="shoppingCart">
         <h3 class="section-title">我的購物車</h3>
         <div class="overflowWrap">
-          <table class="shoppingCart-table">
-            <caption></caption>
-            <tr>
-              <th width="40%">品項</th>
-              <th width="15%">單價</th>
-              <th width="15%">數量</th>
-              <th width="15%">金額</th>
-              <th width="15%"></th>
-            </tr>
-            <tr class="card-item-wrapper"></tr>
-            <tr>
-              <td>
-                <a href="#" class="discardAllBtn">刪除所有品項</a>
-              </td>
-              <td></td>
-              <td></td>
-              <td>
-                <p>總金額</p>
-              </td>
-              <td class="shoppingCartTotal">NT$0</td>
-            </tr>
-          </table>
+          <table class="shoppingCart-table"></table>
         </div>
       </section>
       <section class="orderInfo wrap" id="orderInfo">
