--- a/Hex-flnal-project/pages/index.html
+++ b/Hex-flnal-project/pages/index.html
@@ -23,7 +23,7 @@
     <body>
       <nav class="topBar">
         <div class="wrap">
-          <h1><a href="#" class="logo">不宜家傢俱</a></h1>
+          <h1><a href="#" class="logo">果實傢俱</a></h1>
           <span class="material-icons menuToggle"> menu </span>
           <ul class="topBar-menu">
             <li><a href="#bedAdvantage">床墊優勢</a></li>
@@ -35,14 +35,14 @@
       </nav>
       <section class="wrap" id="bedAdvantage">
         <div class="banner">
-          <h2 class="banner-text">不宜家傢俱<br />跟您一起品味生活</h2>
+          <h2 class="banner-text">果實傢俱<br />跟您一起品味生活</h2>
         </div>
         <h3 class="section-title">床墊優勢</h3>
         <ul class="bedAdvantage">
           <li>
             <img
               class="bedAdvantage-img"
-              src="https://i.imgur.com/tR426y5.png"
+              src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/tR426y5.png?raw=true"
               alt="原木料環保"
             />
             <p class="bedAdvantage-text">原木料環保</p>
@@ -50,7 +50,7 @@
           <li>
             <img
               class="bedAdvantage-img"
-              src="https://i.imgur.com/Fd2MiBb.png"
+              src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/Fd2MiBb.png?raw=true"
               alt="好收納"
             />
             <p class="bedAdvantage-text">好收納</p>
@@ -118,10 +118,10 @@
           <div class="recommendation-wall">
             <ul class="gallery-top">
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/cXcOLhu.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/cXcOLhu.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/I9L7WOr.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/I9L7WOr.png?raw=true" alt="" />
                     <div>
                       <p>王六角</p>
                       <p class="recommend-text">Jodan 雙人床架</p>
@@ -131,10 +131,10 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/BefHmH2.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/BefHmH2.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/CUFGfay.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/CUFGfay.png?raw=true" alt="" />
                     <div>
                       <p>Leaf</p>
                       <p class="recommend-text">Antony 雙人床架</p>
@@ -150,7 +150,7 @@
                 />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/8WwZsLS.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/8WwZsLS.png?raw=true" alt="" />
                     <div>
                       <p>美濃鄧子琪</p>
                       <p class="recommend-text">Charles 系列儲物組合</p>
@@ -160,10 +160,10 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/HvT3zlU.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/HvT3zlU.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/NycuPVy.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/NycuPVy.png?raw=true" alt="" />
                     <div>
                       <p>isRaynotArray</p>
                       <p class="recommend-text">Antony 雙人床架</p>
@@ -173,10 +173,10 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/Ed7bxLr.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/Ed7bxLr.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/zdFOQIv.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/zdFOQIv.png?raw=true" alt="" />
                     <div>
                       <p>程鮭魚</p>
                       <p class="recommend-text">Louvre 雙人床架</p>
@@ -188,10 +188,10 @@
             </ul>
             <ul class="gallery-bottom">
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/BefHmH2.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/BefHmH2.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/W7fyzp2.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/W7fyzp2.png?raw=true" alt="" />
                     <div>
                       <p>小杰</p>
                       <p class="recommend-text">Louvre 雙人床架</p>
@@ -201,7 +201,7 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/mjA01Tk.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/mjA01Tk.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
                     <img
@@ -217,10 +217,10 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/npA3DgP.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/npA3DgP.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/C0NDvSA.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/C0NDvSA.png?raw=true" alt="" />
                     <div>
                       <p>juni讚神</p>
                       <p class="recommend-text">Antony 床邊桌</p>
@@ -230,10 +230,10 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/Ed7bxLr.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/Ed7bxLr.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
-                    <img src="https://i.imgur.com/hUsTZDm.png" alt="" />
+                    <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/hUsTZDm.png?raw=true" alt="" />
                     <div>
                       <p>久安說安安</p>
                       <p class="recommend-text">Antony 單人床架</p>
@@ -243,7 +243,7 @@
                 </div>
               </li>
               <li class="recommendation-card">
-                <img src="https://i.imgur.com/mjA01Tk.png" alt="" />
+                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/mjA01Tk.png?raw=true" alt="" />
                 <div class="recommend-content">
                   <div class="recommend-img">
                     <img
